--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "dayjs": "^1.10.4",
     "mapbox-gl": "^2.0.1",
     "sirv-cli": "^1.0.0"
   }
