--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public"
+    "start": "sirv public",
+    "serve": "netlify dev"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^16.0.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
     "@rollup/plugin-replace": "^2.3.4",
     "dotenv": "^8.2.0",
+    "netlify-cli": "^9.13.6",
+    "netlify-lambda": "^2.0.15",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
@@ -20,6 +23,7 @@
   },
   "dependencies": {
     "dayjs": "^1.10.4",
+    "faunadb": "^4.5.2",
     "mapbox-gl": "^2.0.1",
     "sirv-cli": "^1.0.0"
   }
