--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^16.0.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
     "@rollup/plugin-replace": "^2.3.4",
     "dotenv": "^8.2.0",
     "netlify-cli": "^9.13.6",
     "netlify-lambda": "^2.0.15",
-    "rollup": "^2.3.4",
+    "rollup": "^2.70.1",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
